--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "e2e": "ng e2e",
     "init": "mkdir recoveryWEB && mkdir recoveryAPP && mkdir local",
     "prepare": "",
-    "update": "node update.js",
-    "serve": "npm run update && docsify serve ./docs",
+    "crawl": "node crawl.js",
+    "serve": "npm run crawl && docsify serve ./docs",
     "watch-reset": "echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p"
   },
   "private": false,
