--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "homepage": "https://www.qDesk.org",
   "scripts": {
     "crawl": "node crawl.js",
-    "serve": "npm run crawl && docsify serve ./docs",
+    "serve": "npm run crawl && docsify serve ./docs"
   },
   "private": false,
   "dependencies": {
